# puncture

./: .gitignore  README.md  pyproject.toml
goapp/: README.md  go.mod
goapp/cmd/desktop/: main.go  main_stub.go  simulator_bridge.go
goapp/cmd/server/: main.go
goapp/internal/app/: state.go  state_test.go
goapp/internal/crypto/: manager.go  manager_test.go
goapp/internal/server/: http.go
goapp/internal/server/static/: index.html
goapp/ios/: INSTALL_IPHONE.md  build_signed_ipa.sh
goapp/ios/EmergencyPuncture/: project.yml
goapp/ios/EmergencyPuncture/EmergencyPuncture.xcodeproj/: project.pbxproj
goapp/ios/EmergencyPuncture/Sources/: APIClient.swift  ContentView.swift  EmergencyPunctureApp.swift  Info.plist  Models.swift
goapp/packaging/macos/: AppIcon.icns  Info.plist  build_dmg.sh
goapp/packaging/macos/icon_work/: generate_icon.swift
puncture/: __init__.py  key_manager.py  simulation.py  view_app.py  view_sync.py  web_app.py
tests/: test_asset_helpers_and_ui.py  test_master_asset_mapping.py  test_puncture_manager.py  test_view_app_policy.py  test_view_sync.py
