[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puncture"
version = "0.1.0"
description = "Zero-trust cloud-wide forward secrecy via puncturable GGM keys"
requires-python = ">=3.10"
dependencies = ["flask>=3.0.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
